--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,15 @@ services:
       - "8081:80"
     volumes:
       - ./:/var/www/html
+      - ./apache-config.conf:/etc/apache2/sites-available/000-default.conf
     depends_on:
       - db
+    environment:
+      - ENVIRONMENT=development
+      - APACHE_DOCUMENT_ROOT=/var/www/html
+    restart: unless-stopped
+    networks:
+      - wakaf_network
 
   db:
     image: mysql:8.0
@@ -22,5 +29,19 @@ services:
       MYSQL_USER: wakafuser
       MYSQL_PASSWORD: wakafpass
       MYSQL_ROOT_PASSWORD: rootpass
+      MYSQL_TCP_PORT: 3306
     ports:
       - "3306:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+      - ./mysql-init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - wakaf_network
+    command: --default-authentication-plugin=mysql_native_password
+
+networks:
+  wakaf_network:
+    driver: bridge
+
+volumes:
+  db_data:
