--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   app:
     build:
@@ -15,7 +17,7 @@ services:
       - ENVIRONMENT=development
       - APACHE_DOCUMENT_ROOT=/var/www/html
     restart: unless-stopped
-    networks:
+    networks: # <-- TAMBAHKAN DUA BARIS INI
       - wakaf_network
 
   db:
@@ -29,7 +31,7 @@ services:
       MYSQL_ROOT_PASSWORD: rootpass
       MYSQL_TCP_PORT: 3306
     ports:
-      - "3307:3306"
+      - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
       - ./mysql-init.sql:/docker-entrypoint-initdb.d/init.sql
